# icl-mcs-roasty

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  Roasty.cpp  Roasty.hpp  Serialisation.cpp  Serialisation.hpp  Utilities.hpp  main.cpp
Source/Model/: RoastyModel.cpp  RoastyModel.hpp
Source/Server/: RoastyServer.cpp  RoastyServer.hpp  RoastyServerException.hpp
Source/Storage/: DiskStorage.cpp  DiskStorage.hpp  MemoryStorage.hpp
Tests/: RoastTests.cpp  RoastyTests.cpp  SerialisationTests.cpp
www/: addRoast.html  index.html
